<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.recyclerview.widget.RecyclerView
            android:layoutAnimation="@anim/fall_down_layout_animation"
            android:id="@+id/Rv_recentlyWatched"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="9dp"
            android:text="@string/disney_movies"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rv_newMovies" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/featuringPager"
            android:layout_width="0dp"
            android:layout_height="275dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.viewpager.widget.ViewPager>

        <TextView
            android:id="@+id/tv_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_movies"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userGreetings" />

        <com.google.android.material.tabs.TabLayout
            android:id='@+id/indicator'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/featuringPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuringPager"
            app:tabBackground="@drawable/indicator_selector"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorHeight="0dp">

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layoutAnimation="@anim/fall_down_layout_animation"
            android:id="@+id/Rv_newMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/genreSelector"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@color/itemBackgornd"
            android:saveEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:tabGravity="center"
            app:tabIndicator="@color/TabColor"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/btn_logut_bg">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/actionTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/comedyTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comedy_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/familyTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/horrorTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horror" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/romanceTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/romance" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/thrillerTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thriller_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/scifiTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sci_fi" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layoutAnimation="@anim/fall_down_layout_animation"
            android:id="@+id/Rv_genresView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genreSelector" />

        <TextView
            android:id="@+id/userGreetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textColor="#FF9800"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/movies_by_genre"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rv_recentlyWatched" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>